--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql:spring_sample
+spring.datasource.url=jdbc:postgresql:personal_dev_3980_ito_hideaki
 spring.datasource.username=student
 spring.datasource.password=himitu
 
